# ENIGMA

./: .gitignore  AUTHORS  CHANGELOG.md  CLUSTER_USAGE.md  CMakeLists.txt  KNOWN_ISSUES.md  LICENSE  QUICKSTART.md  README.md  build.sh  run_examples.sh  run_iops_v6_sweep_v2.sh  verify.sh
examples/: example_platform.xml  generate_all_platforms.cpp
include/comms/mqtt/: MQTT.hpp  MQTTPublisher.hpp  MQTTSubscriber.hpp  MQTT_IMPLEMENTATION.md  MQTT_USAGE.md
include/mobility/: MobilityManager.hpp  MobilityPosition.hpp  MobilityTrace.hpp  README.md
include/mqtt/: MQTT.hpp  MQTTBroker.hpp  MQTT_USAGE.md
include/platform/: CloudPlatform.hpp  EdgePlatform.hpp  FogPlatform.hpp  PlatformBuilder.hpp  PlatformGenerator.hpp
include/utils/: XMLWriter.hpp
src/apps/: data_offloading.cpp  fog_analytics.cpp  mqtt_edge_app.cpp
src/comms/mqtt/: MQTTBroker.cpp  MQTTPublisher.cpp  MQTTSubscriber.cpp
src/mobility/: MobilityManager.cpp  MobilityTrace.cpp
src/mqtt/: MQTTBroker.cpp  MQTTPublisher.cpp  MQTTSubscriber.cpp
src/platform/: CloudPlatform.cpp  EdgePlatform.cpp  FogPlatform.cpp  PlatformBuilder.cpp  PlatformGenerator.cpp
src/python/: README.md  requirements.txt
src/python/enigma/: __init__.py
src/python/enigma/comms/: __init__.py
src/python/enigma/comms/mqtt/: __init__.py  mqtt_broker.py  mqtt_config.py  mqtt_publisher.py  mqtt_subscriber.py
src/python/enigma/mobility/: README.md  __init__.py  mobility_manager.py  mobility_recorder.py  mobility_trace.py  mobility_visualizer.py
src/python/enigma/platform/: __init__.py  cloud_platform.py  configs.py  edge_platform.py  fog_platform.py  platform_builder.py  platform_generator.py
src/python/tests/: data_offloading.py  edge_computing.py  fog_analytics.py  hybrid_cloud.py  mobility_test.py  mqtt_edge_app.py
src/python/tools/: mobility_viewer.py  platform_generator_main.py
src/tools/: platform_generator_main.cpp
src/utils/: XMLWriter.cpp
tests/: TEMPLATE_APP_GUIDE.md  edge_computing.cpp  fit_to_g5k_app.cpp  fit_to_g5k_app_v6.cpp  hybrid_cloud.cpp  mobility_test.cpp  mqtt_edge_app.cpp  pingpong_fit_to_g5k_app.cpp
